--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.8.0",
-    "prettier": "2.8.8"
+    "prettier": "2.8.8",
+    "prettier-plugin-organize-imports": "^3.2.2"
   }
 }
