--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://admin:admin@0.0.0.0:27017/db?authSource=admin"
+DATABASE_URL="mongodb://admin:admin@localhost:27017/db?authSource=admin"
