--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.16.3",
     "postcss": "8.4.24",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
