Added live messaging with pusher 7.58.45

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "lodash": "^4.17.21",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.16.3",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/lodash": "^4.14.198",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8",
     "prettier-plugin-organize-imports": "^3.2.2",
